--- a/JustCosmetics/bin/plugin.yml
+++ b/JustCosmetics/bin/plugin.yml
@@ -7,5 +7,5 @@ api-version: 1.13
 commands:
   cosmetic:
     description: Open Cosmetics GUI
-    aliases: [cosmetics]
+    aliases: [cosmetics, cos]
   slime:
