--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
         <dependency>
             <groupId>com.github.puregero</groupId>
             <artifactId>multilib</artifactId>
-            <version>1.2.1-SNAPSHOT</version>
+            <version>1.2.3</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
